style.css
@font-face {
  font-family: 'NunitoSans' !important;
  src: url('/fonts/NunitoSans-Regular/NunitoSans-Regular.eot');
  src: url('/fonts/NunitoSans-Regular/NunitoSans-Regular.eot?#iefix') format('embedded-opentype'),
    url('/fonts/NunitoSans-Regular/NunitoSans-Regular.woff') format('woff'),
    url('/fonts/NunitoSans-Regular/NunitoSans-Regular.ttf') format('truetype'),
    url('/fonts/NunitoSans-Regular/NunitoSans-Regular.svg') format('svg')
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  font-family: NunitoSans, sans-serif;
}

.overlay {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  opacity: 0.3;
  background-color: #fff;
  z-index: 99999;
}

.hidden {
  display: none !important
}

.container {
  display: flex;
  flex-direction: column;
  margin: auto;
  min-width: 320px !important;
  max-width: 990px !important;
  height: 100%;
}

.flex-container {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-radius: 5px;
  box-shadow: 3px 3px 5px 0 rgba(157, 152, 171, .19);
  background-color: #fff;
  text-align: center;
  margin: 1em;
  padding: 15px;
  width: 29%;
  height: 30%;
}

.card:hover {
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
  transform: scale(1.05);
  z-index: 1;
}

.card img {
  width: 55%;
  height: auto;
  margin: 1em;
}

.card-small {
  height: 75px !important;
  margin: 5px;
  transition: all .1s ease-in-out;
}

.card-small p {
  display: none;
}

.card-small img {
  width: 100%;
  min-width: 20px;
  max-width: 64px;
  height: auto;
}

.scrolling-wrapper {
  display: flex;
  flex-wrap: nowrap;
  overflow-x: auto;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

/* FORM STYLE */
.from-section {
  margin-bottom: 1em;
}

.method-container {
  width: 100%;
  height: auto;
  display: flex;
  flex-direction: row;
  background: whitesmoke;
  padding: 50px;
}

.logo-amount-row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
}

.form-logo {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  flex: 1;
  margin-bottom: 1em;
}

.form-logo small {
  margin-top: 0.5em;
}

.payment-data-row {
  display: flex;
  justify-content: flex-end;
}

.payment-data-fields-container {
  display: flex;
  flex-direction: column;
  flex: 0.6;
}

.date-cvv {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.form-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  height: 100%;
}

.small-input-wapper {
  display: flex;
  flex-direction: column;
  width: 49%;
}

.text-input {
  width: 100%;
  height: 45px;
  padding-left: 0.5em;
  font-size: 14px;
  font-weight: bold;
  letter-spacing: 1px;
  color: rgba(72, 80, 109, 0.68);
  border: solid 1px rgba(37, 39, 60, 0.28);
  border-radius: 4px;
}

.text-input:focus {
  color: rgba(72, 80, 109, 0.78);
  border-color: rgba(37, 39, 60, 0.68);
  outline: none;
}

.input-label {
  margin-bottom: 0.5em;
  letter-spacing: 1px;
  font-size: 14px;
  align-self: flex-start;
}

.error {
  color: red;
  font-size: small;
}

.input-container {
  width: 100%;
  height: auto;
  display: flex;
  flex-direction: column;
  margin-bottom: 0.7em;
}

.save-card-container {
  margin-top: 1em;
  margin-bottom: 1em;
}

.has-error {
  border-color: red;
}

.amount-container {
  margin-bottom: 1.2em;
  flex: 1.5;
}

.predefined-amount-row {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: baseline;
}

.manual-amount-row {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.manual-amount {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}


/* [BEGIN] CUSTOM RADIO */
.radio-container {
  display: block;
  position: relative;
  padding-left: 1.7em;
  margin-bottom: 1.3em;
  cursor: pointer;
  font-size: 1.2em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.radio-container-manual-amount {
  margin-bottom: 2.3em;
}


.radio-container input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
}

.checkmark {
  position: absolute;
  top: 0;
  left: 0;
  height: 25px;
  width: 25px;
  background-color: #eee;
  border-radius: 50%;
}

.radio-container:hover input~.checkmark {
  background-color: #ccc;
}

.radio-container input:checked~.checkmark {
  background-color: #eb595c;
}

.checkmark:after {
  content: "";
  position: absolute;
  display: none;
}

.radio-container input:checked~.checkmark:after {
  display: block;
}

.radio-container .checkmark:after {
  top: 9px;
  left: 9px;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background: white;
}

/* [END] CUSTOM RADIO */


/* [BEGIN] CUSTOM CHECKBOX */

.checkbox-container {
  display: block;
  position: relative;
  padding-left: 35px;
  padding-top: 4px;
  margin: 1em 0 1em 0;
  cursor: pointer;
  font-size: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.checkbox-container input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

.checkbox-mark {
  position: absolute;
  top: 0;
  left: 0;
  height: 25px;
  width: 25px;
  background-color: white;
  border-radius: 2px;
}

.checkbox-container:hover input~.checkbox-mark {
  background-color: #ccc;
}

.checkbox-container input:checked~.checkbox-mark {
  background-color: #eb595c;
}

.checkbox-mark:after {
  content: "";
  position: absolute;
  display: none;
}

.checkbox-container input:checked~.checkbox-mark:after {
  display: block;
}

.checkbox-container .checkbox-mark:after {
  left: 10px;
  top: 7px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

/* [END] CUSTOM CHECKBOX */

.submit-row {
  display: flex;
  justify-content: flex-end;
  margin: 0.8em 0 0.8em 0;
}

.submit-container {
  display: flex;
  flex-direction: column;
  flex: 0.6;
  align-items: center;
  margin-top: 1.2em;
}

.submit-button {
  height: 45px;
  width: 100%;
  border-radius: 2px;
  border: 0;
  font-size: 1em;
  background-image: linear-gradient(79deg, #eb595c, #ea5293);
  color: white;
}

.cancel-link {
  margin-top: 1.5em;
  align-self: center;
  font-size: 0.8em;
}

.cards-brands {
  width: 80%;
}

.pci-logo-wrapper {
  text-align: center;
}

.pci-logo {
  width: 20%;
}

.add-new {
  display: inline-flex;
  margin-top: 1em;
}

.add-new:hover {
  cursor: pointer;
}

.text-new {
  margin-left: 0.3em;
  text-decoration: underline;
}

/* [BEGIN] CUSTOM SELECT ELEMENT */

.select-wrapper {
  width: 60%;
}

.select {
  display: flex;
  flex-direction: column;
  position: relative;
  width: 100%;
  height: 45px;
}

.option {
  padding-left: 1em;
  min-height: 45px;
  display: flex;
  align-items: center;
  background: #E5E5E5;
  border-top: #222 solid 1px;
  position: absolute;
  top: 0;
  width: 100%;
  pointer-events: none;
  order: 2;
  z-index: 1;
  transition: background .1s ease-in-out;
  box-sizing: border-box;
  overflow: hidden;
  white-space: nowrap;

}

.option:hover {
  background: white;
}

.select:focus .option {
  position: relative;
  pointer-events: all;
}

.option-input {
  opacity: 0;
  position: absolute;
  left: -99999px;
}

.option-input:checked+label {
  order: 1;
  z-index: 2;
  background: white;
  border-top: none;
  position: relative;
  padding-left: 3em;
}

.option-content-container {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.delete-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 40px;
  height: 45px;
  z-index: 9999;
}

.delete-icon:hover {
  cursor: pointer;
}

/* [BEGIN] SELECT ARROW */
.option-input:checked+label:after {
  content: '';
  width: 0;
  height: 0;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 5px solid white;
  position: absolute;
  left: 10px;
  top: calc(50% - 2.5px);
  pointer-events: none;
  z-index: 3;
}

.option-input:checked+label:before {
  position: absolute;
  left: 0;
  height: 45px;
  width: 30px;
  content: '';
  background: #eb595c;
}

/* [END] SELECT ARROW */
/* [END] CUSTOM SELECT ELEMENT */

.select-cvv-container {
  width: 80%;
  margin-right: 0.8em;
}

.select-cvv {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.phone-wrapper {
  display: flex;
}

.phone-code {
  width: 20%;
}

.phone {
  width: 80%;
}

/* MARGINS */
.mb-8em {
  margin-bottom: 0.8em;
}

/* MEDIA QUERRY */

/* MAX 370px */
@media only screen and (max-width: 370px) {
  .predefined-amount-row {
    flex-direction: column;
  }

  .predefined-amount-row label {
    margin-bottom: 1em;
  }
}

/* MAX 420px */
@media only screen and (max-width: 420px) {
  .select-cvv {
    flex-direction: column;
    align-items: flex-start;
  }

  .select-cvv-container {
    width: 100%;
    margin: 0;
  }

  .wrappable {
    width: 100%;
    margin-top: 0.5em;
  }

  .card-small {
    height: 60px !important;
  }

}

/* MAX 600px */
@media only screen and (max-width: 600px) {
  .card {
    width: 40%;
    height: 20%;
    transition: none;
  }

  .card-small img {
    margin: 1em;
  }

  .card:hover {
    transform: none;
  }

  .select-wrapper {
    flex: 1;
  }

  .payment-data-fields-container {
    flex: 1;
  }

  .submit-container {
    flex: 1;
  }

  .submit-row {
    justify-content: center;
  }

  .logo-amount-row {
    flex-direction: column;
  }

  .amount-container {
    width: 100%;
  }
}

/* BETWEEN 600px and 768px */
@media only screen and (min-width: 600px) and (max-width: 768px) {
  .card {
    width: 28%;
    height: 30%;
    transition: none;
  }

  .card:hover {
    transform: none;
  }
}

